--- a/unitestdemos/package.json
+++ b/unitestdemos/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./tests/**/*.test.js --watch",
+    "test": "mocha ./tests/**/*.test.js --watch --timeout 60000",
     "test:jest": "jest --watch"
   },
   "keywords": [],
