--- a/unitestdemos/package.json
+++ b/unitestdemos/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./tests/**/*.test.js --watch --timeout 60000",
+    "test": "mocha ./tests/**/*.test.js --watch --timeout 10000",
     "test:jest": "jest --watch"
   },
   "keywords": [],
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "jest": "^26.5.3",
     "mocha": "^8.1.3"
   }
