--- a/unitestdemos/package.json
+++ b/unitestdemos/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./tests/**/*.test.js --watch --timeout 10000",
+    "test:coverage": "nyc --reporter=html mocha ./tests/**/*.test.js  --timeout 10000  ",
     "test:jest": "jest --watch"
   },
   "keywords": [],
@@ -13,7 +14,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+   
     "jest": "^26.5.3",
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0"
   }
 }
