--- a/primeserver/package.json
+++ b/primeserver/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon app/server.js",
-    "loadtest":"loadtest -n 1000000 -c 10 -k http://localhost:3000/primes/2/50",
+    "start": "nodemon app/server.js",
+    "loadtest": "loadtest -n 1000000 -c 10 -k http://localhost:3000/primes/2/50",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "heapdump": "^0.3.15"
   }
 }
